test/classes/initializers/generics/phase1/type-from-new.good
type-from-new.chpl:11: error: cannot initialize type field 't' with 'new' expression
